<resources>
    <string name="app_name">mycompetes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="logout_desc">Logout</string>
    <string name="browser_desc">Open Competitions Browser</string>

    <!-- Strings related to actions -->
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_create_table">Create new Compete</string>

    <!-- Strings related to menu -->
    <string name="menu_login">Login</string>
    <string name="menu_home">Home</string>
    <string name="menu_browser">Browser</string>
    <string name="menu_competitions">Competitions</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_person_name">Full Name</string>
    <string name="welcome">Welcome!</string>
    <string name="require_email">Email is required</string>
    <string name="require_password">Password is required</string>
    <string name="require_name">Please provide a valid name</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_header">Profile</string>
    <string name="verify_email">Check your email to verify your account</string>
    <string name="registration_success">User has been registered successfully</string>
    <string name="registration_failed">Failed to register! Please, try again!</string>
    <string name="database_error">Login servers are busy now! Please, try later!</string>
    <string name="error">Unexpected error occurred! Please, try again!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>