<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_register"
        android:name="ru.te4nick.mycompetes.ui.login.RegisterFragment"
        android:label="@string/menu_login" />
    <fragment
        android:id="@+id/nav_home"
        android:name="ru.te4nick.mycompetes.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_browser"
        android:name="ru.te4nick.mycompetes.ui.browser.BrowserFragment"
        android:label="@string/menu_browser" />

    <fragment
        android:id="@+id/nav_competitions"
        android:name="ru.te4nick.mycompetes.ui.competitions.CompetitionsFragment"
        android:label="@string/menu_competitions" />
    <fragment
        android:id="@+id/nav_login"
        android:name="ru.te4nick.mycompetes.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />
</navigation>